feat: working on signature visualization

--- a/ClientApp/src/app/components/signatures/signatures/signatures.component.html
+++ b/ClientApp/src/app/components/signatures/signatures/signatures.component.html
@@ -1,3 +1,4 @@
+<ngx-loading [show]="loading"></ngx-loading>
 <div class="d-flex flex-column" *ngIf="!route.firstChild">
     <h3 class="my-5">Assinaturas</h3>
     
