--- a/ClientApp/src/app/components/signatures/signature-details/signature-details.component.html
+++ b/ClientApp/src/app/components/signatures/signature-details/signature-details.component.html
@@ -19,41 +19,5 @@
         </a>
     </div>
     
-    <mat-card class="d-flex flex-column mt-3">
-        <ng-container *ngIf="!signature.failure else badSignature">
-            <h2 class="d-flex flex-row align-items-center text-success mx-3">
-                Assinatura válida
-                <mat-icon class="mx-3">done</mat-icon>
-            </h2>
-
-            <div class="d-flex flex-row col-12 mt-5 mx-3">
-                <div class="d-flex flex-column col-4">
-                    <app-property name="Chave pública RSA (base64)" class="col-12">
-                        Valor: {{ signature.publicKeyBase64 }} <br/> <br/>
-                        Módulo: {{ signature.publicKeyModulusBase64 }}
-                    </app-property>
-    
-                    <app-property name="Chave de criptografia simétrica (base64)" class="col-12 my-5">
-                        {{ signature.encryptionKeyBase64 }}
-                    </app-property>
-                </div>
-                <div class="d-flex flex-column col-4 mx-5">
-                    <app-property name="Assinatura (base64)" class="col-12">
-                        {{ signature.signatureParametersBase64 }}
-                    </app-property>
-    
-                    <app-property name="Hash do conteúdo do arquivo (base64)" class="col-12 my-5">
-                        {{ signature.dataHashBase64 }}
-                    </app-property>
-                </div>
-            </div>
-        </ng-container>
-
-        <ng-template #badSignature>
-            <h2 class="d-flex flex-row align-items-center text-warning mx-3">
-                Assinatura inválida
-                <mat-icon class="mx-3">dangerous</mat-icon>
-            </h2>
-        </ng-template>
-    </mat-card>
+    <app-signature-viewer [signature]="signature" class="mt-3" *ngIf="signature"></app-signature-viewer>
 </div>
