--- a/ClientApp/src/app/components/signatures/signature-viewer/signature-viewer.component.html
+++ b/ClientApp/src/app/components/signatures/signature-viewer/signature-viewer.component.html
@@ -33,5 +33,33 @@
             Assinatura inválida
             <mat-icon class="mx-3">dangerous</mat-icon>
         </h2>
+
+        <div class="d-flex flex-row col-12 mt-5 mx-3">
+            <app-property name="Erro">
+                {{ signature.failure }}
+            </app-property>
+        </div>
+
+        <div class="d-flex flex-row col-12 mt-5 mx-3">
+            <div class="d-flex flex-column col-4">
+                <app-property name="Chave pública RSA (base64)" class="col-12" *ngIf="signature.publicKeyBase64">
+                    Valor: {{ signature.publicKeyBase64 }} <br /> <br />
+                    Módulo: {{ signature.publicKeyModulusBase64 }}
+                </app-property>
+
+                <app-property name="Chave de criptografia simétrica (base64)" class="col-12 my-5" *ngIf="signature.encryptionKeyBase64">
+                    {{ signature.encryptionKeyBase64 }}
+                </app-property>
+            </div>
+            <div class="d-flex flex-column col-4 mx-5">
+                <app-property name="Assinatura (base64)" class="col-12" *ngIf="signature.signatureParametersBase64">
+                    {{ signature.signatureParametersBase64 }}
+                </app-property>
+
+                <app-property name="Hash do conteúdo do arquivo (base64)" class="col-12 my-5" *ngIf="signature.dataHashBase64">
+                    {{ signature.dataHashBase64 }}
+                </app-property>
+            </div>
+        </div>
     </ng-template>
 </mat-card>
