--- a/ClientApp/src/app/components/verification/verification/verification.component.html
+++ b/ClientApp/src/app/components/verification/verification/verification.component.html
@@ -3,8 +3,8 @@
     <h3 class="my-5">Verificar assinatura</h3>
     
     <div class="d-flex flex-row">
-        <app-file-upload content="Selecionar arquivo" icon="file_upload" (onFileUploaded)="openAndVerify($event)"></app-file-upload>
-        <button mat-stroked-button color="primary" (click)="downloadDecrypted()" *ngIf="signature" class="mx-3">
+        <app-file-upload content="Selecionar arquivo" icon="file_upload" (onFileUploaded)="openAndVerify($event)" *ngIf="!file"></app-file-upload>
+        <button mat-stroked-button color="primary" (click)="downloadDecrypted()" *ngIf="signature && !signature.failure" class="mx-3">
             <mat-icon>download</mat-icon>
             Baixar arquivo decifrado
         </button>
